--- a/app-web/src/app/globals.css
+++ b/app-web/src/app/globals.css
@@ -50,14 +50,14 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: var(--andes-neutral-100);
+  --foreground: var(--andes-neutral-800);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: var(--andes-neutral-100);
+    --foreground: var(--andes-neutral-800);
   }
 }
 
